# mlx-audio-api

./: .gitignore  CHANGELOG.md  README.md  api_reference.md  pyproject.toml
scripts/: convert_model.py  quantize_fish_s2.py  upgrade_deps.sh
src/: __main__.py  auth.py  config.py  models.py  reference_manager.py  request_queue.py  server.py  tts_engine.py
tests/: test_concurrent_api.py  test_concurrent_api_long.py  test_performance.py  test_text_length_scaling.py
