[project]
name = "tts-inference-api"
version = "1.0.0"
description = "Local TTS inference API built on MLX Audio, optimized for Apple Silicon"
requires-python = ">=3.10"
dependencies = [
    "mlx-audio>=0.4.0",
    "fastapi",
    "uvicorn[standard]",
    "requests",
    "pydub",
    "httpx",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hypothesis]
max_examples = 100

[tool.uv.sources]
mlx-audio = { git = "https://github.com/Blaizzy/mlx-audio.git" }
